[gd_scene load_steps=16 format=3 uid="uid://dx4hwtnr40m1r"]

[ext_resource type="Script" path="res://src/perry_space/perry_space.gd" id="1_yw0yd"]
[ext_resource type="PackedScene" uid="uid://b0e3falqlw7c6" path="res://src/main/game_background.tscn" id="2_esp7d"]
[ext_resource type="Script" path="res://src/perry_space/player.gd" id="3_60l8u"]
[ext_resource type="Texture2D" uid="uid://betwbe8urunx7" path="res://textures/perry_space/space_background_256_512.png" id="3_bvgf7"]
[ext_resource type="Texture2D" uid="uid://b3dk38awhbahp" path="res://textures/perry_space/attack_256.png" id="4_jqsem"]
[ext_resource type="AudioStream" uid="uid://dubvdpeowmlwb" path="res://sounds/perry_space/rocket_shoot.wav" id="5_r6tm6"]
[ext_resource type="AudioStream" uid="uid://qr7a7tnqwl30" path="res://sounds/perry_space/player_hit.wav" id="6_huksw"]
[ext_resource type="Script" path="res://src/perry_space/enemy_spawner.gd" id="6_rbrt6"]

[sub_resource type="Gradient" id="Gradient_fecji"]
colors = PackedColorArray(0.939454, 0.905903, 1.54018e-06, 1, 1, 0, 0, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_es2e6"]
gradient = SubResource("Gradient_fecji")

[sub_resource type="Curve" id="Curve_a80q3"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0.515789), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_dut66"]
curve = SubResource("Curve_a80q3")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_y75bv"]
lifetime_randomness = 0.3
emission_shape = 3
emission_box_extents = Vector3(1, 2, 1)
particle_flag_disable_z = true
spread = 30.0
gravity = Vector3(0, 0, 0)
initial_velocity_min = -200.0
initial_velocity_max = -200.0
orbit_velocity_min = 0.0
orbit_velocity_max = 0.0
scale_min = 10.0
scale_max = 10.0
scale_curve = SubResource("CurveTexture_dut66")
color_ramp = SubResource("GradientTexture1D_es2e6")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gy4xc"]
size = Vector2(26, 48)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3f3jt"]
size = Vector2(98.054, 1024)

[node name="PerrySpace" type="Node2D"]
script = ExtResource("1_yw0yd")

[node name="Camera2D" type="Camera2D" parent="."]
unique_name_in_owner = true
position = Vector2(360, 640)
enabled = false

[node name="GameBackground" parent="." instance=ExtResource("2_esp7d")]
game_background_texture = ExtResource("3_bvgf7")

[node name="Player" type="CharacterBody2D" parent="."]
unique_name_in_owner = true
collision_mask = 2
script = ExtResource("3_60l8u")

[node name="FlameParticles" type="GPUParticles2D" parent="Player"]
position = Vector2(-32, 0)
amount = 100
process_material = SubResource("ParticleProcessMaterial_y75bv")
lifetime = 0.3

[node name="Sprite2D" type="Sprite2D" parent="Player"]
scale = Vector2(0.2, 0.2)
texture = ExtResource("4_jqsem")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
position = Vector2(8, 0)
shape = SubResource("RectangleShape2D_gy4xc")

[node name="RocketSpawn" type="Node" parent="Player"]

[node name="RocketShootSound" type="AudioStreamPlayer" parent="Player"]
stream = ExtResource("5_r6tm6")
bus = &"Game"

[node name="PlayerDamageSound" type="AudioStreamPlayer" parent="Player"]
stream = ExtResource("6_huksw")
bus = &"Game"

[node name="RocketTimer" type="Timer" parent="Player"]
unique_name_in_owner = true
wait_time = 0.9

[node name="StartPosition" type="Marker2D" parent="."]
unique_name_in_owner = true
position = Vector2(128, 664)

[node name="EnemySpawner" type="Node2D" parent="."]
unique_name_in_owner = true
script = ExtResource("6_rbrt6")

[node name="EnemyTimer" type="Timer" parent="EnemySpawner"]
unique_name_in_owner = true
wait_time = 2.0

[node name="SpawnLocations" type="Node2D" parent="EnemySpawner"]

[node name="Marker1" type="Marker2D" parent="EnemySpawner/SpawnLocations"]
unique_name_in_owner = true
position = Vector2(704, 288)

[node name="Marker2" type="Marker2D" parent="EnemySpawner/SpawnLocations"]
unique_name_in_owner = true
position = Vector2(704, 480)

[node name="Marker3" type="Marker2D" parent="EnemySpawner/SpawnLocations"]
unique_name_in_owner = true
position = Vector2(704, 1088)

[node name="Marker4" type="Marker2D" parent="EnemySpawner/SpawnLocations"]
unique_name_in_owner = true
position = Vector2(704, 688)

[node name="Marker5" type="Marker2D" parent="EnemySpawner/SpawnLocations"]
unique_name_in_owner = true
position = Vector2(704, 896)

[node name="EnemyDeathzone" type="Area2D" parent="."]
unique_name_in_owner = true
position = Vector2(0, 688)
collision_layer = 8
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyDeathzone"]
shape = SubResource("RectangleShape2D_3f3jt")

[node name="RocketDeathzone" type="Area2D" parent="."]
unique_name_in_owner = true
position = Vector2(712, 688)
collision_layer = 1024
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="RocketDeathzone"]
shape = SubResource("RectangleShape2D_3f3jt")
